--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,7 @@ body {
   background-color: #eeeff1;
 }
 
+/* css for the navbar */
 .navbar {
   padding: 20px;
   z-index: 1;
@@ -16,8 +17,16 @@ body {
   padding-left: 5px;
 }
 
-#dashboard-row-one {
-  margin-top: 50px;
-  margin-bottom: 10px;
-  margin-left: 50px;
+/*css for the images on the bottom */
+.hover02 figure img {
+  margin: 5px;
+  float: left;
+	width: 100px;
+	height: auto;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
+.hover02 figure:hover img {
+	width: 120px;
+}
+
