social media + faq
added social media icons and added faq.html beginning

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -87,3 +87,20 @@ body {
 .programming-pic {
   border-radius: 15px;
 }
+
+.social-media {
+  position: fixed;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  display: flex;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  flex-direction: column;
+}
+
+.social-icons {
+  position: sticky;
+  padding-top: 17px;
+}
