--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,8 +75,11 @@ body {
     line-height: 26px;
     opacity: 0.7;
       
-  }
+  } 
 
+  .progress-bar-marker {
+    background-image: linear-gradient(90deg, rgba(225, 225, 225, 0.1) 99%, rgb(108, 247, 114) 1%);
+}
 
 @media(max-width:767px) {
   .programming-pic {
