--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -107,3 +107,14 @@ body {
   position: sticky;
   padding-top: 17px;
 }
+
+.card-deck{
+  height: 35rem; 
+  width: 50rem;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: scale-down;
+}
