--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,8 +2,6 @@ body {
   background-color: #f8f8f8 !important;
 }
 
-/* css voor navbar */
-
 .navbar {
   padding: 20px;
   z-index: 1;
@@ -18,17 +16,17 @@ body {
   padding-left: 5px;
 }
 
-/*css voor fotos aan de onderkant*/
 .hover02 figure img {
   margin: 5px;
   margin-left: 60px;
-	width: 90px;
+  width: 90px;
   float: left;
-	height: auto;
+  height: auto;
   transition: 1s ease;
 }
+
 .hover02 figure:hover img {
-	-webkit-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
   -ms-transform: scale(1.2);
   transform: scale(1.4);
   transition: 1s ease;
@@ -43,6 +41,7 @@ body {
   font-weight: 500;
   position: relative;
 }
+
 .text-gray {
   margin-top: 25px;
   line-height: 46px;
@@ -58,32 +57,38 @@ body {
   margin-right: 50px;
 }
 
+.text-big {
+  color: #000;
+  font-size: 25px;
+  font-weight: 300;
+}
+
 #text-one {
   margin-left: 50px;
   margin-bottom: 50px;
 }
 
 #intro-row {
-      margin-top: 110px;
-      margin-bottom: 140px;
-      margin-left: 50px;
-  }
+  margin-top: 110px;
+  margin-bottom: 140px;
+  margin-left: 50px;
+}
 
-  #copyright {
-    color: #8f929e;
-    font-size: 14px;
-    line-height: 26px;
-    opacity: 0.7;
-      
-  } 
+#copyright {
+  color: #8f929e;
+  font-size: 14px;
+  line-height: 26px;
+  opacity: 0.7;
 
-  .progress-bar-marker {
-    background-image: linear-gradient(90deg, rgba(225, 225, 225, 0.1) 99%, rgb(108, 247, 114) 1%);
+}
+
+.progress-bar-marker {
+  background-image: linear-gradient(90deg, rgba(225, 225, 225, 0.1) 99%, rgb(108, 247, 114) 1%);
 }
 
 @media(max-width:767px) {
   .programming-pic {
-      display: none;
+    display: none;
   }
 }
 
@@ -108,8 +113,8 @@ body {
   padding-top: 17px;
 }
 
-.card-deck{
-  height: 35rem; 
+.card-deck {
+  height: 35rem;
   width: 50rem;
 }
 
@@ -119,6 +124,23 @@ body {
   object-fit: scale-down;
 }
 
-.arrow-button:focus{
+.arrow-button:focus {
   box-shadow: none;
+}
+
+.btn-outline-dark {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border: 1px solid #ced1df;
+  border-radius: 8px;
+  font-size: 16px;
+  line-height: 39px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.index_link {
+  color: black;
 }
